# kanatest

./: AUTHORS  ChangeLog  Makefile.am  README  TRANSLATORS  autogen.sh  configure.ac  kanatest.desktop
data/: Makefile.am
data/icons/16x16/: Makefile.am
data/icons/22x22/: Makefile.am
data/icons/24x24/: Makefile.am
data/icons/32x32/: Makefile.am
data/icons/48x48/: Makefile.am
data/maemo/: kanatest.desktop  org.clayo.kanatest.service
data/maemo/icons/26x26/: Makefile.am
data/maemo/icons/40x40/: Makefile.am
data/maemo/icons/scalable/: Makefile.am
data/pixmaps/: Makefile.am
debian/: changelog  control  copyright  kanatest.install  postinst  rules
po/: Makefile.am  POTFILES.in  de.po  el.po  es.po  fi.po  fr.po  hr.po  hu.po  it.po  kanatest.pot  pl.po  pt.po  ru.po  zh_CN.po
src/: Makefile.am  about.c  about.h  chart.c  chart.h  graphics.h  gui.c  gui.h  gui_utils.c  gui_utils.h  i18n.h  main.c  main.h  options.c  options.h  prefs.c  prefs.h  stats.c  stats.h  stock_icons.c  stock_icons.h  stock_icons_data.h  test.c  test.h
